devops/nexus/nexus-traefik.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus-ns
  labels:
    app: nexus
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nexus
  namespace: nexus-ns
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nexus.shixiaochuang.org`)
      kind: Rule
      services:
        - name: nexus
          port: 8081
